--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Your Name"
 description              : "An amazing website."
-url                      : "soorim5685.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://soorim5685.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -279,6 +279,7 @@ defaults:
       comments: # true
       share: true
       related: true 
+     
      
      remote_theme : mmistakes/minimal-mistakes
      
